fixing - too small on mobile

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ button {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 26px;
+  font-size: 1rem;
 }
 
 .disable-button {
